# rtic-weact-stm32h743

./: Cargo.toml  README.md  rebuild.sh
src/: main.rs
